# src/modules/accounts/useCases/authenticateUser/AuthenticateUserController.ts
@@ -1,20 +1,17 @@
 import { Request, Response } from 'express';
 import { container } from 'tsyringe';
 
-import { AuthenticateUserUseCase } from '@modules/accounts/useCases/authenticateUser/AuthenticateUserUseCase';
+import { AuthenticateUserUseCase } from './AuthenticateUserUseCase';
 
 class AuthenticateUserController {
   async handle(request: Request, response: Response): Promise<Response> {
-    const { email, password } = request.body;
+    const { password, email } = request.body;
 
     const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase);
 
-    const token = await authenticateUserUseCase.execute({
-      email,
-      password,
-    });
+    const token = await authenticateUserUseCase.execute({ password, email });
 
-    return response.status(201).json(token);
+    return response.json(token);
   }
 }
 
